// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TitleWrapper/> render() should render empty state cause no data is available 1`] = `
<Fragment>
  <ExpandAllButton />
  <CardHeaderTitle>
    <CardHeaderIcon
      alt="Yotpo"
      src="test-file-stub"
    />
    Yotpo
    <CardHeaderStatusLabel />
  </CardHeaderTitle>
</Fragment>
`;

exports[`<TitleWrapper/> render() should render empty state cause no data is available 2`] = `
<StaticField
  noBold={true}
>
  No statistic data are available right now.
</StaticField>
`;

exports[`<TitleWrapper/> render() should render icon, points and not tier because data is missing 1`] = `
<Fragment>
  <ExpandAllButton />
  <CardHeaderTitle>
    <CardHeaderIcon
      alt="Yotpo"
      src="test-file-stub"
    />
    Yotpo
    <CardHeaderYotpoBadge
      iconName="stars"
    >
      1
    </CardHeaderYotpoBadge>
    <CardHeaderStatusLabel />
  </CardHeaderTitle>
</Fragment>
`;

exports[`<TitleWrapper/> render() should render icon, points and tier because data is correct 1`] = `
<Fragment>
  <ExpandAllButton />
  <CardHeaderTitle>
    <CardHeaderIcon
      alt="Yotpo"
      src="test-file-stub"
    />
    Yotpo
    <CardHeaderYotpoBadge
      iconName="stars"
    >
      1
    </CardHeaderYotpoBadge>
    <CardHeaderStatusLabel>
      Vip
    </CardHeaderStatusLabel>
  </CardHeaderTitle>
</Fragment>
`;

exports[`<TitleWrapper/> render() should render nothing cause data is available 1`] = `""`;
